<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.AboutFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/reverse_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/app_name"
        android:textAppearance="@style/item_title_style" />

    <TextView
        android:id="@+id/tv_about_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/about_text"
        android:textAppearance="@style/item_desc_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rate_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="18dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/basic_desc"
                android:padding="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_rate_app" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="18dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/share_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/basic_desc"
                android:padding="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_share_app" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
